[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificTooltip/BaseTowerSpecificTooltip_BodyBackground.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificTooltip/BaseTowerSpecificTooltip_DownBorder.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityTooltip/AbilityTooltip_Header.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/Tooltips/BaseTooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityTooltip/AbilityTooltip.gd" type="Script" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="AbilityTooltip" instance=ExtResource( 5 )]
script = ExtResource( 6 )
header_left_text = ""
header_left_color = Color( 0.866667, 0.866667, 0.866667, 1 )
header_middle_text = ""
header_middle_color = Color( 0.866667, 0.866667, 0.866667, 1 )
header_right_text = ""
header_right_color = Color( 0.866667, 0.866667, 0.866667, 1 )
simple_descriptions = [  ]
use_simple_descriptions = false
body_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 160.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_vertical = 2
custom_constants/separation = 0

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer" index="0"]
margin_right = 160.0
margin_bottom = 14.0
mouse_filter = 2

[node name="HeaderBackground" type="TextureRect" parent="VBoxContainer/HeaderMarginer" index="0"]
margin_right = 160.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="LabelMarginer" type="MarginContainer" parent="VBoxContainer/HeaderMarginer" index="1"]
margin_right = 160.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/margin_right = 3
custom_constants/margin_top = 2
custom_constants/margin_left = 3
custom_constants/margin_bottom = 0

[node name="LeftLabel" type="Label" parent="VBoxContainer/HeaderMarginer/LabelMarginer" index="0"]
margin_left = 3.0
margin_top = 3.0
margin_right = 23.0
margin_bottom = 12.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "wdadw"

[node name="MiddleLabel" type="Label" parent="VBoxContainer/HeaderMarginer/LabelMarginer" index="1"]
margin_left = 68.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 12.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "wdadwd"

[node name="RightLabel" type="Label" parent="VBoxContainer/HeaderMarginer/LabelMarginer" index="2"]
margin_left = 133.0
margin_top = 3.0
margin_right = 157.0
margin_bottom = 12.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "wdadwd"

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer" index="1"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 160.0
margin_bottom = 4.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TooltipBody" parent="VBoxContainer/BodyMarginer" index="1" instance=ExtResource( 7 )]
margin_right = 160.0
margin_bottom = 4.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer" index="2"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 19.0
mouse_filter = 2
texture = ExtResource( 3 )
